Fix spacing on turn-token styling and html

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ h2 {
 
 .turn-token {
   height: 50px;
+  padding: 0px 3px 0px 10px;
 
 }
 .gameboard {
